--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,5 +29,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="154dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_below="@+id/editText1"
+        android:layout_centerHorizontal="true"
+        android:onClick="onClick"/>
+
 
 </RelativeLayout>
